--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>To Do App</title>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,100&display=swap" rel="stylesheet">
       <script src="https://kit.fontawesome.com/9d65ca8cf1.js"></script>
-	<script src="dist/app.js" defer></script>
+	<script type="module" src="dist/app.js" defer></script>
 </head>
 <body>
 	<main class="container">
